# sunbeam

./: .air.conf  .dockerignore  .env  .envrc  .gitignore  .gitpod.yml  .goreleaser.yaml  .replit  404.html  CHANGELOG.md  Dockerfile  LICENSE-MIT  LICENSE.txt  Makefile  README.md  action.json  alacritty.yml  book.toml  catalog.md  deno.json  devbox.json  flake.nix  go.mod  go.sum  hashmap.json  index.html  install.tmpl.sh  main.go  manifest.ts  oranda.json  package.json  page.go  page.ts  replit.nix  run.sh  script_commands.go  serve.go  shell.nix  sitemap.xml  sunbeam.json  (+6 more)
.codesandbox/: Dockerfile  tasks.json
.devcontainer/: Dockerfile  devbox.json  devcontainer.json  on-create.sh  post-create.sh
api/: command.go  manifest.go  response.go  script.go
app/: build.go  command.go  extension.go  listitem.json  manifest.go  manifest.json  page.go  script.go  script_test.go
assets/: alacritty.yml  app.BMfleoR_.js  catalog_index.md.1Mz7595s.lean.js  docs_alternatives.md.B7T_bG__.lean.js  docs_developer-guide_examples_devdocs.md.DbH5y0x8.lean.js  docs_developer-guide_examples_file-browser.md.D6Ncw_yg.lean.js  docs_developer-guide_examples_google-search.md.BNkPmGOD.js  docs_developer-guide_examples_hackernews.md.B22ntBDW.lean.js  docs_developer-guide_guidelines.md.Cz-pi-7s.lean.js  docs_developer-guide_publishing.md.DO8u9cFK.js  docs_developer-guide_tips.md.CkYu35Cb.js  docs_index.md.D88Sg4A6.js  (+12 more)
pkg/python/: .gitignore  Makefile  README.md  manifest.py  pyproject.toml
pkg/python/sunbeam/: __init__.py  manifest.py  page.py
python/: pyproject.toml  sunbeam.py
(+992 files in other folders)
