[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sunbeam"
authors = [{ name = "Achille Lacoin", email = "achille.lacoin@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.optional-dependencies]
dev = ["black"]

[project.urls]
Home = "https://sunbeam.sh"
